Fix to mobile nav and display on IE

--- a/development/scss/_ug-framework.scss
+++ b/development/scss/_ug-framework.scss
@@ -445,6 +445,17 @@ ul.pagination>li a { background-color: $gray-light; }
     width: auto;
 }
 
+#undergrad-admission.col-lg-9 {
+	@include media-breakpoint-down(lg) {
+		margin: 20px 10px 0 0;
+		width: 70%;
+	}
+	@include media-breakpoint-down(md) {
+		margin: 0;
+		padding: 0;
+	}
+}
+
 #undergrad-admission h6, #undergrad-admission a h6 {
 	float: right;
 	margin: 25px 10px 0 0;
@@ -454,9 +465,11 @@ ul.pagination>li a { background-color: $gray-light; }
 	letter-spacing: -.015em;
 	color: $gray-extra-dark !important;
 	text-align: right;
+	@include media-breakpoint-down(lg) {
+		margin: 0 10px 0 0;
+	}
 	@include media-breakpoint-down(md) {
-		margin: 8px 10px 0 0;
-		font-size: 1em;
+		display: none;
 	}
 	@include media-breakpoint-down(sm) {
 		display: none;
@@ -477,13 +490,21 @@ ul.pagination>li a { background-color: $gray-light; }
 	background-repeat: no-repeat;
 	background-size: 80%;
 	background-position: 50% 40%;
+	@include media-breakpoint-down(lg) {
+		margin: 0;
+	}
 	@include media-breakpoint-down(md) {
-		margin: 5px 0 0 0;
-		width: 25px;
-		height: 25px;
+		float: left;
+		margin: -2px 0 0 0;
+		width: 30px;
+		height: 30px;
+		background-position: 49% 40%;
 	}
 	@include media-breakpoint-down(sm) {
-		display: none;
+		margin: -2px 0 0 10px;
+		width: 35px;
+		height: 35px;
+		background-position: 49% 40%;
 	}
 }
 
@@ -621,12 +642,6 @@ footer .col-sm-3 { padding-right: 0; } /* footer wordmark wrapper */
 }
 
 #ug-nav ul li, #ug-cta ul li, #ug-explore ul li { float: left; margin: 0; width: auto; }
-
-@media only screen
-and (min-width : 1024px)
-and (max-width : 1024px) {
-		#ug-nav ul li, #ug-cta ul li { padding: 0 2% !important; }
-}
 
 #ug-cta ul {
 	float: left;
@@ -931,7 +946,7 @@ and (orientation : landscape) { .ug-global-close .glyphicon { left: 50%; }
 	}
 }
 
-@media only screen and (max-device-width : 1366px) {
+@media only screen and (max-device-width : 767px) {
 	.ug-global-nav-wrapper-mobile {
 			display: block !important;
 			position: absolute;
@@ -945,7 +960,7 @@ and (orientation : landscape) { .ug-global-close .glyphicon { left: 50%; }
     position: fixed;
     right: 0;
     top: 0;
-}
+	}
 }
 
 .ug-global-nav-wrapper-mobile .ug-global-nav { width: 50%; }
